@@ -28,6 +28,8 @@ static BOOL _fontNameRelease = NO;
 
 @implementation MenuItem
 
+@synthesize label;
+
 -(id) init
 {
 	NSException* myException = [NSException
